2009-11-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (string-prefix-p): New function.

	* man.el (Man-completion-cache): New var.
	(Man-completion-table): Use it.

	* vc.el (vc-print-log-internal): Make `limit' optional for better
	compatibility (e.g. with vc-annotate.el).

2009-11-24  Kevin Ryde  <user42@zip.com.au>

	* emacs-lisp/checkdoc.el (checkdoc-proper-noun-regexp):
	Build value with regexp-opt instead of explicit joining loop.  (My
	Bug#4927.)

	* emacs-lisp/elint.el (elint-add-required-env): Better error message
	when .el source file not found or other error.

2009-11-24  Markus Triska  <markus.triska@gmx.at>

	* linum.el (linum-update-window): Ignore intangible (bug#4996).

2009-11-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	Handle the [back] button properly (bug#4979).
	* descr-text.el (describe-text-properties): Add a `buffer' argument.
	Use help-setup-xref, help-buffer, and with-help-window.
	(describe-char): Add `buffer' argument.
	Pass proper command to help-setup-xref.  Don't meddle with
	help-xref-stack-item directly.
	(describe-text-category): Use with-help-window and help-buffer.

	* emacs-lisp/shadow.el (list-load-path-shadows): Setup a major mode
	for the displayed buffer (bug#4887).

	* man.el (Man-completion-table): New function.
	(man): Use it.

2009-11-24  David Reitter  <david.reitter@gmail.com>

	* vc-git.el (vc-git-registered): Use checkout directory (where
	.git is) rather than the file's directory and a relative path spec
	to work around a bug in git.

2009-11-24  Michael Albinus  <michael.albinus@gmx.de>

	Improve handling of processes on remote hosts.

	* eshell/esh-util.el (eshell-path-env): New defvar.
	(eshell-parse-colon-path): New defun.
	(eshell-file-attributes): Use `eshell-parse-colon-path'.

	* eshell/esh-ext.el (eshell-search-path):
	Use `eshell-parse-colon-path'.
	(eshell-remote-command): Remove argument HANDLER.
	(eshell-external-command): Check for FTP remote connection.
